--- a/netbeans-project/views/pesquinia.ejs
+++ b/netbeans-project/views/pesquinia.ejs
@@ -17,6 +17,7 @@
          <script src="javascripts/atari/preloadjs-0.2.0.min.js" ></script>
          <script src="javascripts/atari/json2.min.js" ></script>
          <script src="javascripts/recursos.js" ></script>
+         <script src="javascripts/animaciones.js" ></script>
          <script src="javascripts/pesquinia.js" ></script>
     </head>
     <body onload="init()">
