--- a/netbeans-project/views/pesquinia.ejs
+++ b/netbeans-project/views/pesquinia.ejs
@@ -13,6 +13,7 @@
             }catch(exc){
             }
         </script>
+        
          <script src="javascripts/atari/jquery-1.7.2.min.js" ></script>
          <script src="javascripts/atari/easeljs-0.7.1.min.js" ></script>
          <script src="javascripts/atari/tweenjs-0.5.1.min.js" ></script>
@@ -24,9 +25,21 @@
          <script src="javascripts/animaciones.js" ></script>
          <script src="javascripts/pesquinia.js" ></script>
          <script src="javascripts/full.js" ></script>
+
          <link rel="stylesheet" type="text/css" href="stylesheets/estilo.css">
     </head>
     <body>
         <canvas id="juego" width="1327" height="1004"></canvas>
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51895308-1', 'pescaredlobster.com');
+  ga('send', 'pageview');
+
+        </script>
     </body>
+
 </html>
