--- a/netbeans-project/views/pesquinia.ejs
+++ b/netbeans-project/views/pesquinia.ejs
@@ -14,8 +14,9 @@
             }
         </script>
         
-         <script src="javascripts/atari/jquery-1.7.2.min.js" ></script>
-         <script src="javascripts/atari/easeljs-0.7.1.min.js" ></script>
+         <!-- <script src="javascripts/atari/jquery-1.7.2.min.js" ></script> -->
+        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script> 
+        <script src="javascripts/atari/easeljs-0.7.1.min.js" ></script>
          <script src="javascripts/atari/tweenjs-0.5.1.min.js" ></script>
          <script src="javascripts/atari/preloadjs-0.2.0.min.js" ></script>
          <script src="javascripts/atari/json2.min.js" ></script>
@@ -25,7 +26,8 @@
          <script src="javascripts/animaciones.js" ></script>
          <script src="javascripts/pesquinia.js" ></script>
          <script src="javascripts/full.js" ></script>
-
+         <script src="javascripts/share.js" ></script>
+         <script src="javascripts/compartir.js" ></script>
          <link rel="stylesheet" type="text/css" href="stylesheets/estilo.css">
     </head>
     <body>
