--- a/netbeans-project/public/stylesheets/estilo.css
+++ b/netbeans-project/public/stylesheets/estilo.css
@@ -3,3 +3,55 @@ body{
     background: #999;
 }
 
+.lista{
+    background-color: white;
+}
+
+table{
+    border-color: #ffffff;
+    border-width: 1px;
+    border: solid black 2px;
+}
+
+tr{
+    border: blue 1px solid;
+}
+
+.titulo{
+    width: 276px;
+}
+
+.col{
+    width: 70px;
+    text-align: center;
+}
+
+.img{
+    height: 60px;
+    width: 60px;
+    padding-left: 5px;
+    padding-top: 15px;
+}
+
+.img img{
+    height: 130px;
+}
+
+.num{
+    width:40px;
+    text-align: center;
+}
+
+.marcador{
+    height: 700px;
+width: 300px;
+overflow-x: hidden;
+overflow-y: overlay;
+}
+
+.puntos{
+    
+display: inline-block;
+margin-left: 10px;
+margin-top: 10px;
+}
