facebook plug in
face

--- a/netbeans-project/views/pesquinia.ejs
+++ b/netbeans-project/views/pesquinia.ejs
@@ -29,7 +29,8 @@
          <script src="javascripts/share.js" ></script>
          <script src="javascripts/compartir.js" ></script>
          <link rel="stylesheet" type="text/css" href="stylesheets/estilo.css">
-         <script>(function() {
+         <!-- Facebook Conversion Code for PixelPesquinia -->
+<script>(function() {
 var _fbq = window._fbq || (window._fbq = []);
 if (!_fbq.loaded) {
 var fbds = document.createElement('script');
@@ -41,9 +42,9 @@ _fbq.loaded = true;
 }
 })();
 window._fbq = window._fbq || [];
-window._fbq.push(['track', '6014983128135', {'value':'0.01','currency':'USD'}]);
+window._fbq.push(['track', '6014990823535', {'value':'0.01','currency':'USD'}]);
 </script>
-<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6014983128135&amp;cd[value]=0.01&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6014990823535&amp;cd[value]=0.01&amp;cd[currency]=USD&amp;noscript=1" /></noscript>
     </head>
     <body>
         <canvas id="juego" width="1327" height="1004"></canvas>
