--- a/netbeans-project/public/stylesheets/estilo.css
+++ b/netbeans-project/public/stylesheets/estilo.css
@@ -55,3 +55,15 @@ display: inline-block;
 margin-left: 10px;
 margin-top: 10px;
 }
+
+.b{
+    width:200px;
+}
+
+.o{
+    width: 200px;
+}
+
+.mb{
+    width:660px;
+}
