cambio en vistas

--- a/netbeans-project/views/lista.ejs
+++ b/netbeans-project/views/lista.ejs
@@ -21,7 +21,7 @@
                 Puntos
             </th>
             <th class="col">
-                Imagen Usuario
+                Imagen
             </th>
         </tr>
     </table>
@@ -35,9 +35,9 @@
                 <%=(a+1)%>
             <td>
             <td class="col">
-                <a href='https://www.facebook.com/<%=marcadores[a].id%>'>
+                
                 <%= marcadores[a].nombre %>
-                </a>
+                
             </td>
             <td class="col">
                 <%= marcadores[a].puntos %>
