--- a/netbeans-project/views/lista.ejs
+++ b/netbeans-project/views/lista.ejs
@@ -5,10 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <script src="javascripts/atari/jquery-1.7.2.min.js" ></script>
+         <script src ="javascripts/conteo.js"></script>
          <link rel="stylesheet" type="text/css" href="stylesheets/estilo.css">
     </head>
     <body class="lista">
-<div class="puntos">
+<div class="puntos left">
     <table class="titulo">
         <tr>
             <th class="num">
@@ -55,6 +56,14 @@
     </table>
     </div>
 </div>
+<div class="left contador">
+        <h1>
+            Tiempo de juego restante:
+        </h1>
+        <h1 class="cd" id="tiempo">
+            00:00:00
+        </h1>
+    </div>
 <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
