--- a/netbeans-project/views/listaBaneados.ejs
+++ b/netbeans-project/views/listaBaneados.ejs
@@ -18,7 +18,7 @@
                 Nombre
             </th>
             <th class="col b">
-                Puntos
+                Trampas
             </th>
             <th class="col b">
                 Imagen Usuario
