marcador con link

--- a/netbeans-project/views/listaBaneados.ejs
+++ b/netbeans-project/views/listaBaneados.ejs
@@ -35,7 +35,9 @@
                 <%=(a+1)%>
             <td>
             <td class="col b">
-                <%= marcadores[a].nombre %>
+                <a href='http://facebook.com/<%=marcadores[a].id%>'>
+                    <%= marcadores[a].nombre %>
+                </a>
             </td>
             <td class="col b">
                 <%= marcadores[a].puntos %>
