Estilos otra lista

--- a/netbeans-project/views/listaG.ejs
+++ b/netbeans-project/views/listaG.ejs
@@ -9,7 +9,7 @@
     </head>
     <body class="lista">
 <div class="puntos left">
-    <table class="titulo">
+    <table class="titulog">
         <tr>
             <th class="num">
                 Lugar
@@ -28,7 +28,7 @@
             </th>
         </tr>
     </table>
-    <div class="marcador">
+    <div class="marcadorg">
     <table>
         <% for(var a=0;a<marcadores.length;a++){ if(marcadores[a] ) {%>
 
