--- a/netbeans-project/public/stylesheets/estilo.css
+++ b/netbeans-project/public/stylesheets/estilo.css
@@ -21,6 +21,10 @@ tr{
     width: 276px;
 }
 
+.titulog{
+    width: 370px;
+}
+
 .col{
     width: 70px;
     text-align: center;
@@ -45,6 +49,13 @@ tr{
 .marcador{
     height: 700px;
 width: 300px;
+overflow-x: hidden;
+overflow-y: overlay;
+}
+
+.marcadorg{
+    height: 700px;
+width: 370px;
 overflow-x: hidden;
 overflow-y: overlay;
 }
