--- a/netbeans-project/views/listaG.ejs
+++ b/netbeans-project/views/listaG.ejs
@@ -66,7 +66,7 @@
             Felicitaciones a los ganadores del concurso:
         </h1>
         <h1 class="cd" id="tiempo">
-            La langosta del día.
+            La pesca del día.
         </h1>
     </div>
 <script>
