--- a/netbeans-project/views/pesquinia.ejs
+++ b/netbeans-project/views/pesquinia.ejs
@@ -19,10 +19,13 @@
         <script src="javascripts/atari/easeljs-0.7.1.min.js" ></script>
          <script src="javascripts/atari/tweenjs-0.5.1.min.js" ></script>
          <script src="javascripts/atari/preloadjs-0.2.0.min.js" ></script>
+         <script src="https://code.createjs.com/soundjs-0.6.0.min.js" ></script>
+         <!--<script src="javascripts/atari/soundjs.flashplugin-NEXT.min.js" ></script>-->
          <script src="javascripts/atari/json2.min.js" ></script>
          <script src="/socket.io/socket.io.js"></script>
          <script src="javascripts/socket-client.js"></script>
          <script src="javascripts/recursos.js" ></script>
+         <script src="javascripts/iniciarSonidos.js" ></script>
          <script src="javascripts/animaciones.js" ></script>
          <script src="javascripts/pesquinia.js" ></script>
          <script src="javascripts/full.js" ></script>
@@ -48,6 +51,10 @@ window._fbq.push(['track', '6014990823535', {'value':'0.01','currency':'USD'}]);
     </head>
     <body>
         <canvas id="juego" width="1327" height="1004"></canvas>
+        <div id="pantalla" style="width: 30px;
+  height: 30px;
+  position: fixed;
+  background-color: rgba(136, 208, 156, 0.5);"></div>
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
